<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authenticate_gradient_bg"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_gravity="end"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="444dp"
                android:background="@drawable/white_curve_bg"
                android:contentDescription="@string/todo"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="#030303"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/email"
                    android:textColor="#c2c2c2"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints="Email"
                    android:id="@+id/loginEmailId"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minHeight="30dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="#d5d5d5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/password"
                    android:textColor="#c2c2c2"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="3"
                        android:autofillHints="Password"
                        android:id="@+id/loginPassword"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_semibold"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:minHeight="30dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="44dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/toggle_password"
                        android:src="@drawable/password_toggle_hide" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="#d5d5d5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/forgot_password"
                    android:textColor="#c2c2c2"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/google_sign"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/google_signin"
                        android:src="@drawable/google_icon"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="55dp"
                        android:layout_weight="2"
                        android:contentDescription="@string/facebook_signin"
                        android:src="@drawable/fb_icon"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="75dp"
                        android:layout_weight="2"
                        android:contentDescription="@string/twitter_sign_in"
                        android:paddingTop="1dp"
                        android:src="@drawable/twitter_icon"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/loginButton"
                        android:alpha="0.8"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/black_arrow"
                        android:contentDescription="@string/proceed"
                        />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/directToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/Register"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>